# ideviewer-oss

./: .dockerignore  .gitignore  .gitleaksignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum  ideviewer.spec  pyproject.toml  requirements.txt  setup.py  start.sh
assets/: .gitkeep
build_scripts/: Dockerfile.linux  build.py  build_all.sh  build_deb_package.py  build_debian.sh  build_linux_docker.sh  build_macos.sh  build_windows.bat  uninstall_macos.sh  windows_installer.iss  windows_installer_arm64.iss
deploy/: README.md  deploy.sh
docs/: _config.yml  cli-reference.md  configuration.md  contributing.md  index.md  installation.md
ideviewer/: __init__.py  api_client.py  cli.py  daemon.py  dependency_scanner.py  gitleaks.py  hooks.py  models.py  sarif_formatter.py  scanner.py  secrets_scanner.py  updater.py
portal/: .dockerignore  Dockerfile  README.md  config.py  docker-compose.yml  entrypoint.sh  requirements.txt  run.py  run_scheduler.py
rules/: extension_risk_tiers.json  threat_intel.json
tests/: __init__.py  conftest.py  test_cli.py  test_dependencies.py  test_models.py  test_portal_api.py  test_portal_audit.py  test_portal_config.py  test_portal_coverage.py  test_portal_csv.py  test_portal_drift.py  test_portal_enforcement.py  test_portal_extension_enrich.py  test_portal_integrity.py  test_portal_observability.py  test_portal_policies.py  test_portal_queue.py  test_portal_risk_rules.py  test_portal_risk_score.py  test_portal_sbom.py  test_portal_signing.py  test_portal_soar.py  test_portal_threat_intel.py  test_portal_tokens.py  test_portal_webhooks.py  test_sarif.py  (+3 more)
(+196 files in other folders)
