[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ideviewer"
version = "0.2.0"
description = "Cross-platform IDE and Extension Scanner Daemon"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Securient"}
]
keywords = ["ide", "extensions", "security", "scanner", "daemon", "vscode", "jetbrains"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "schedule>=1.2.0",
    "watchdog>=3.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
ideviewer = "ideviewer.cli:main"

[project.urls]
Homepage = "https://github.com/securient/ideviewer"
Documentation = "https://github.com/securient/ideviewer#readme"
Repository = "https://github.com/securient/ideviewer"

[tool.setuptools.packages.find]
where = ["."]
include = ["ideviewer*"]
